ansible-k8s/roles/bitnami-kube-prod-runtime/splitted_manifests/OAuth2/deployment_6.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels:
    name: oauth2-proxy
  name: oauth2-proxy
  namespace: kubeprod
spec:
  minReadySeconds: 30
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: oauth2-proxy
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations: {}
      labels:
        name: oauth2-proxy
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  name: oauth2-proxy
              topologyKey: kubernetes.io/hostname
            weight: 70
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  name: oauth2-proxy
              topologyKey: failure-domain.beta.kubernetes.io/zone
            weight: 70
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  name: oauth2-proxy
              topologyKey: failure-domain.beta.kubernetes.io/region
            weight: 70
      containers:
      - args:
        - --cookie-domain=hosteaching.ovh
        - --cookie-refresh=3h
        - --cookie-secure=true
        - --email-domain=hosteaching.ovh
        - --http-address=0.0.0.0:4180
        - --keycloak-group=
        - --login-url=https://id.hosteaching.ovh/auth/realms/BKPR/protocol/openid-connect/auth
        - --provider=keycloak
        - --redeem-url=https://id.hosteaching.ovh/auth/realms/BKPR/protocol/openid-connect/token
        - --redirect-url=https://auth.hosteaching.ovh/oauth2/callback
        - --set-xauthrequest=true
        - --ssl-insecure-skip-verify=false
        - --tls-cert-file=
        - --upstream=file:///dev/null
        - --validate-url=https://id.hosteaching.ovh/auth/realms/BKPR/protocol/openid-connect/userinfo
        image: bitnami/oauth2-proxy:5.1.1-debian-10-r46
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /ping
            port: http
          initialDelaySeconds: 30
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          name: http
        readinessProbe:
          httpGet:
            path: /ping
            port: http
        resources:
          requests:
            cpu: 10m
        stdin: false
        tty: false
        volumeMounts: []
      imagePullSecrets: []
      initContainers: []
      terminationGracePeriodSeconds: 30
      volumes: []
