ansible-k8s/roles/bitnami-kube-prod-runtime/splitted_manifests/OAuth2/service_15.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    name: oauth2-proxy
  name: oauth2-proxy
  namespace: kubeprod
spec:
  ports:
  - name: http
    port: 4180
    targetPort: 4180
  selector:
    name: oauth2-proxy
  type: ClusterIP
