ansible-k8s/roles/bitnami-kube-prod-runtime/splitted_manifests/OAuth2/ingress_5.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      location "~^/(?<target_host>[^/]+\.hosteaching\.ovh)(?<remaining_uri>.*)$" {
        rewrite ^ $scheme://$target_host$remaining_uri;
      }
  labels:
    name: oauth2-ingress
  name: oauth2-ingress
  namespace: kubeprod
spec:
  rules:
  - host: auth.hosteaching.ovh
    http:
      paths:
      - backend:
          serviceName: oauth2-proxy
          servicePort: 4180
        path: /oauth2/
      - backend:
          serviceName: oauth2-proxy
          servicePort: 4180
        path: /
  tls:
  - hosts:
    - auth.hosteaching.ovh
    secretName: oauth2-ingress-tls
